attempting to fix background positioning on mobile. position set to % instead of vh

--- a/vuetodo/style.css
+++ b/vuetodo/style.css
@@ -6,7 +6,7 @@
 
 body {
     position: relative;
-    height: 100%;
+    height: 100vh;
     background-image: url("bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -16,7 +16,7 @@ body {
 .todoList {
     position: absolute;
     left: 50%;
-    top: 20%;
+    top: 20vh;
     width: 30%;
     transform: translateX(-50%);
     display: flex;
